--- a/main.tex
+++ b/main.tex
@@ -109,11 +109,46 @@
 \section{~~Career Objective}
   \resumeSubHeadingListStart
   \item[]
-     {Practical and versatile Software Engineer with significant experience in developing software and websites. I can handle multiple tasks daily. I use a creative approach to solve problems. I am a dependable person who is great at time management. I am always energetic and eager to learn new skills.}
+     {Practical and versatile Software Engineer with significant experience in developing Websites and Web Applications. I can handle multiple tasks daily. I use a creative approach to solve problems. I am a dependable person who is great at time management. I am always energetic and eager to learn new skills.}
   \resumeSubHeadingListEnd
   \vspace{1pt}
 %--------------------------------END Career Objective---------------------------
 
+
+
+
+%--------------------------------START Career Summary-------------------------
+\section{~~Career Summary}
+  \resumeSubHeadingListStart
+  \item[]
+     {I am a developer who is working on an organization named CODEZ Info Tech. My responsibility here is to design and develop Websites and Web Applications. My goal is to work hard to make my educational and professional skills in a flawless workplace.}
+  \resumeSubHeadingListEnd
+  \vspace{1pt}
+%--------------------------------END Career Summary---------------------------
+
+
+
+
+
+%---------------------------------START Experience------------------------------
+\section{Experience}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+        {Web Developer}{December 10, 2020 - Present}
+		{- \quad Design and Develop Websites and Web Applications}{CODEZ Info Tech}
+        {\newline \\}
+		{- \quad UI/UX Design \\ 
+		- \quad Problem Solving}{}
+        \vspace{.5pt}
+
+    \resumeSubheading
+        {Web Developer}{August 2019 – September 2020}
+		{- \quad Developed and maintained affiliate marketing website}{Crystal It and Soft, Rangpur}
+		{\newline \\}
+		{- \quad Wrote over 150 contents for those websites}
+  \resumeSubHeadingListEnd
+  \vspace{1pt}
+%---------------------------------END Experience--------------------------------
 
 
 
@@ -123,20 +158,20 @@
   %-----------B.Sc.Engg. EDUCATION-----------------
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Bachelor of Science in Computer Science and Engineering ((B.Sc. in CSE) }{2016 - 2021}
-      {Bangladesh Army University of Science and Technology (BAUST)}{}
+      {Bachelor of Science in Computer Science and Engineering (B.Sc. in CSE) }{2016 - 2021}
+      {Bangladesh Army University of Science and Technology (BAUST)}{2.96 out of 4.00}
       \vspace{.5pt}
     
     %-----------HSC EDUCATION-----------------
     \resumeSubheading
       {Higher Secondary Certificate (HSC)}{2014 - 2016}
-      {Carmichael College Rangpur}{}
+      {Carmichael College Rangpur}{4.58 out of 5.00}
       \vspace{.5pt}
 
     %-----------SSC EDUCATION-----------------
     \resumeSubheading
       {Secondary School Certificate (SSC)}{2006 - 2014}
-      {Rangpur Zilla School}{}
+      {Rangpur Zilla School}{5.00 out of 5.00}
     \resumeSubHeadingListEnd
     \vspace{2pt}
 %---------------------------END Academic Qualification--------------------------
@@ -146,11 +181,12 @@
 
 
 %------------------------------------START Thesis-------------------------------
-\section{Thesis}
+\section{Undergraduate Thesis and Project}
     \resumeSubHeadingListStart
-        \resumeSubItem{Undergraduate Thesis and Project}{Hand pose estimation in single RGB image with Multiview Bootstrapping.
-        \newline
-        - \quad Deep Learning, OpenCV, Convolutional Neural Network (CNN), Python}
+        \resumeSubItem{Hand Pose Estimation in Single RGB Image with Multiview Bootstrapping.}{ \\
+        - \quad Deep Learning, OpenCV \\
+        - \quad Convolutional Neural Network (CNN) \\
+        - \quad Python (TensorFlow, Matplotlib, Scikit-Learn, OpenCV, Media pipe)}
     \resumeSubHeadingListEnd
     \vspace{1pt}
 %------------------------------------END Thesis---------------------------------
@@ -176,31 +212,8 @@
 
 
 
-%---------------------------------START Experience------------------------------
-\section{Experience}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-        {Web Developer}{Crystal It and Soft, Rangpur}
-		{Developed and maintained affiliate marketing website.}{2019 -  2020}
-        \vspace{.5pt}
-
-    \resumeSubheading
-        {Content Writer}{Crystal It and Soft, Rangpur}
-		{Wrote over 150 articles/blogs for the company's various clients.}{2019 -  2020}
-		\vspace{.5pt}
-
-    \resumeSubheading
-		{Problem Solver}{\href{https://www.hackerrank.com/montasim}{hackerrank.com/montasim}}
-		{Solution driven programmer.}{2018 -  Present}
-  \resumeSubHeadingListEnd
-  \vspace{1pt}
-%---------------------------------END Experience--------------------------------
-
-
-
-
-
 %--------------------------------START Projects---------------------------------
+\begin{comment}
 \section{Projects}
 \resumeSubHeadingListStart
 \resumeSubItem{Employee Management System}{A simple Employee Management System website. With this website a company can maintain their employees. Employee can request leave from this website. Admin can manage all employees from here. 
@@ -229,27 +242,26 @@
 - \quad Java, Android}
 \resumeSubHeadingListEnd
 \vspace{1pt}
+\end{comment}
 %----------------------------------END Projects---------------------------------
 
 
 
-%-------------------------------START Skills Summary----------------------------
-\section{Skills Summary}
+%-------------------------------START Specialization----------------------------
+\section{Specialization}
 	\resumeSubHeadingListStart
-	\resumeSubItem{Programming Languages}{C, C++, JAVA, Python, PHP, SQL}
-	\resumeSubItem{Web Frameworks}{Django, Flask, PyGame, Bootstrap, Tailwind CSS}
-	\resumeSubItem{Web Technologies}{PHP, HTML, CSS, XML, Markdown}
+	\resumeSubItem{Programming Languages}{C, C++, C\#, Java, JavaScript, Python}
+	\resumeSubItem{Web Technologies}{PHP, ASP.NET, ReactJS, HTML, CSS, XML, JSON, Markdown }
+	\resumeSubItem{Web Frameworks}{Django, Laravel, Flask, Bootstrap, Tailwind CSS}
 	\resumeSubItem{Content Management System (CMS)}{WordPress, Blogger}
-	\resumeSubItem{Databases}{SQL Server, MySQL, SQLite}
-	\resumeSubItem{Toolkits}{LaTex}
+	\resumeSubItem{Databases}{SQL, MySQL, SQLite}
+	\resumeSubItem{Realtime Database}{Firebase}
 	\resumeSubItem{Version Control}{Git, GitHub}
-	\resumeSubItem{Operating System}{Windows(10,8.1,7), Ubuntu(16.04-20.04), Fedora, Red Hat, Kali, Linux Mint, Android}
-	\resumeSubItem{IDE Experience}{Visual Studio Code, Pycharm, Android Studio, NetBeans, IntelliJ IDEA, Pycharm, CLion, Sublime \\ \hspace{28mm} Text, CodeBlocks, Nodepad++, XAMPP}
-	\resumeSubItem{Office Software}{MS Word, Excel, Powerpoint}
-	\resumeSubItem{Soft Skills}{Leadership, Event Management, Writing, Time Management}
+	\resumeSubItem{Toolkits}{LaTeX, MATLAB}
+	\resumeSubItem{Human Skills}{Leadership, Time Management}
 \resumeSubHeadingListEnd
 \vspace{1pt}
-%---------------------------------END Skills Summary----------------------------
+%---------------------------------END Specialization----------------------------
 
 
 
@@ -258,8 +270,9 @@
 %------------------------------START Language proficiency-----------------------
 \section{Language proficiency}
 	\resumeSubHeadingListStart
-	\resumeSubItem{English\hspace{2mm}}{Well versed in both written and spoken English}
-	\resumeSubItem{Bengli\hspace{3.6mm}}{Mother tongue}
+	\resumeSubItem{English\hspace{2mm}}{Well versed in reading, writing, listening, and speaking}
+	\resumeSubItem{Bengli\hspace{3.6mm}}{Native Language}
+	\resumeSubItem{Hindi\hspace{4.7mm}}{Well versed in listening, and speaking}
 \resumeSubHeadingListEnd
 \vspace{1pt}
 %------------------------------END Language proficiency-------------------------
@@ -269,6 +282,7 @@
 
 
 %-----------------START Training, Participation and Certification---------------
+\begin{comment}
 \section{Training, Participation and Certification}
 \begin{description}[font=$\bullet$]
 \item {Mobile Game And Application Development For Android - at ICT Division of Bangladesh}
@@ -290,6 +304,7 @@
 \item {Use Commands and Create a Remote Git Repository - at Coursera online course}
 \end{description}
 \vspace{1pt}
+\end{comment}
 %-------------------END Training, Participation and Certification---------------
 
 
@@ -313,20 +328,20 @@
 
 
 
-%--------------------------START Extra Curriculum Activities--------------------
-\section{Extra Curriculum Activities}
+%--------------------------START Extra-Curricular Activities--------------------
+\section{Extra-Curricular Activities}
   \resumeSubHeadingListStart
 	\resumeSubheading
-    {Bangladesh National Cadet Corps(BNCC)}{Mohasthan Battaliont}
-    {Ex. Cadet, Second best cadet at 2 Mohastan Battaliont}{2011 - 2014}
+    {Bangladesh National Cadet Corps(BNCC)}{2011 - 2014}
+    {- \quad Ex. Cadet, Second best cadet at 2 Mohastan Battaliont}{Mohasthan Battaliont}
     \vspace{.5pt}
     % \vspace{10pt}\textbf{\large{Community Experience}}
     \resumeSubheading
-    {Event Organizer}{Rangpur Zilla School}
-    {Organized events, conducted workshops and delivered workshops}{2012 - 2014}
+    {Event Organizer}{2012 - 2014}
+    {- \quad Organized events, conducted workshops and delivered workshops}{Rangpur Zilla School}
 \resumeSubHeadingListEnd
 \vspace{1pt}
-%--------------------------END Extra Curriculum Activities----------------------
+%--------------------------END Extra-Curricular Activities----------------------
 
 
 
@@ -339,14 +354,11 @@
         \begin{tabular}{l l}
             \textbf{Father's Name} \hspace{33mm} : \hspace{2mm} MD. Hafizar Rahman \\
             \textbf{Mother's Name} \hspace{31.4mm} : \hspace{2mm} MST. Majida Begum \\
-            \textbf{Present and Parmanent Address} \hspace{1.4mm} : \hspace{2mm} Balapara 20 Mega Watt, Rangpur Sadar, Rangpur, Bangladesh \\
-            \textbf{Date of Birth} \hspace{35.1mm} : \hspace{2mm} 16 December 1998 \\
+            \textbf{Date of Birth} \hspace{35.1mm} : \hspace{2mm} December 16, 1998  \\
             \textbf{Nationality} \hspace{39mm} : \hspace{2mm} Bangladeshi \\
-            \textbf{NID No} \hspace{44.7mm} : \hspace{2mm} 195 472 8935 \\
-            \textbf{Gender} \hspace{45.9mm} : \hspace{2mm} Male \\
-            \textbf{Marital Status} \hspace{33.1mm} : \hspace{2mm} Married \\
+            \textbf{Blood Group} \hspace{35.7mm} : \hspace{2mm} B+ \\
             \textbf{Religion} \hspace{44.4mm} : \hspace{2mm} Islam \\
-            \textbf{Blood Group} \hspace{35.7mm} : \hspace{2mm} B+ 
+            \textbf{Present and Parmanent Address} \hspace{1.4mm} : \hspace{2mm} Balapara 20 Mega Watt, Rangpur Sadar, Rangpur, Bangladesh
         \end{tabular}
     \resumeSubHeadingListEnd
     \vspace{1pt}
@@ -356,16 +368,16 @@
 
 
 
-%-------------------------------START References-----------------------------
-\section{~~References}
+%-------------------------------START Reference (s)-----------------------------
+\section{~~Reference (s)}
     \resumeSubHeadingListStart
         \resumeSubheading
-          {Professor Dr. Md. Mamunur Rashid}{} 
-          {Dean, Faculty of Electrical and Computer Engineering (ECE)}{} 
+          {Tareq Aziz}{} 
+          {Data Engineer}{} 
           \hfill \break
-          {Bangladesh Army University of Science and Technology (BAUST)
+          {CODEZ Info Tech
           \newline
-          Mobile: +8801769675558, Email: hdcse@baust.edu.bd}
+          Mobile: +88 01947818375, Email: tareqitbuzz@gmail.com}
         
         \resumeSubheading
       {Abu Saleh Musa Miah}{} 
@@ -376,12 +388,13 @@
       Mobile: +8801734264899, Email: abusalehcse.ru@gmail.com}
   \resumeSubHeadingListEnd
   \vspace{1pt}
-%----------------------------------END References-------------------------------
+%----------------------------------END Reference (s)-------------------------------
 
 
 
 
 %--------------------------------START Signature-------------------------
+\begin{comment}
   \resumeSubHeadingListStart
   \item[]
      \vspace{50pt}
@@ -392,6 +405,7 @@
      {\hspace{115mm} Mohammad Montasim -Al- Mamun Shuvo}
   \resumeSubHeadingListEnd
   \vspace{1pt}
+  \end{comment}
 %--------------------------------END Signature---------------------------
 
 
